--- a/public/styles.css
+++ b/public/styles.css
@@ -28,6 +28,10 @@ body {
     border-right: 1px solid #ddd;
 }
 
+h1 {
+    font-size: 2em;
+    margin-bottom: 20px;
+}
 
 button {
     padding: 10px 20px;
@@ -70,6 +74,10 @@ input {
     border-radius: 5px;
 }
 
+#output {
+    margin-top: 20px;
+}
+
 #dice-container {
     margin-top: 20px;
 }
@@ -78,4 +86,5 @@ input {
     width: 50px;
     height: 50px;
     margin: 5px;
+    cursor: pointer;
 }
