--- a/app/views/index.html
+++ b/app/views/index.html
@@ -138,6 +138,15 @@
             <button id="clear-leaderboard">Clear Leaderboard</button>
         </div>
     </div>
+    <div id ="SignUp">
+        <h1>Add Data</h1>
+        <form action="dbinsert.php" method="post">
+            <input type="text" name="username" placeholder="Username">
+            <input type="text" name="firstName" placeholder="First Name">
+            <input type="text" name="locations" placeholder="Location">
+            <button type="submit">Add Data</button>
+        </form>
 </div>
+
 </body>
 </html>
